# mana-habilidade-gerar-pdf-timbrado

./: README.md  SKILL.md  manifest.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
src/mana_habilidade_gerar_pdf_timbrado/: __init__.py  core.py
tests/: test_core.py
