[project]
name = "mana-habilidade-gerar-pdf-timbrado"
version = "0.3.0"
description = "Geração de PDF com timbre canônico Maná (cabeçalho verde + ouro, rodapé, tabelas, parágrafos) via reportlab puro — sem dep de arquivo de logo, sem binário do SO."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Sementes Maná LTDA" }
]
keywords = ["mana", "habilidade", "mana-builder", "pdf", "reportlab", "timbre", "agro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.urls]
Homepage = "https://github.com/Sementesmana/mana-habilidade-gerar-pdf-timbrado"
Repository = "https://github.com/Sementesmana/mana-habilidade-gerar-pdf-timbrado"
Issues = "https://github.com/Sementesmana/mana-habilidade-gerar-pdf-timbrado/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mana_habilidade_gerar_pdf_timbrado"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/SKILL.md",
    "/manifest.yaml",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
